Added field ruc validate create and login generate JWT
